# gki_kernel_builder

./: .env.template  .gitmodules  .pre-commit-config.yaml  README.md  cli.py  cli.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  codecov.yml  multi.yml  release.yml
kernel_builder/: constants.py  kernel_builder.py
kernel_builder/config/: README.md  config.py  manifest.py  variants.json
kernel_builder/interface/: patcher.py
kernel_builder/post_build/: export_env.py  flashable.py  kpm.py
kernel_builder/pre_build/: configurator.py  ksu.py  lxc.py  susfs.py  variants.py
kernel_builder/utils/: build.py  clang.py  command.py  fs.py  github.py  log.py  source.py  variants_parser.py
kernel_patches/: lxc_support.patch  syscall_hooks_v1.4.patch  tracepoint_hooks_v1.1.patch
key/: key.pem
preserved/pre_build/: kpm.py
tests/: conftest.py  test_cli.py
tests/utils/: test_fs.py  test_log.py  test_patch.py  test_source_manager.py  test_variant_parser.py
typings/lz4/: __init__.pyi  version.pyi
typings/lz4/block/: __init__.pyi
typings/lz4/frame/: __init__.pyi
typings/sh/: __init__.pyi
