[project]
name            = "kernel_builder"
version         = "1.0.0"
description     = "A python android12-5.10 gki kernel builder"
readme          = "README.md"
license         = "GPL-3.0"
license-files   = ["LICENSE"]
requires-python = ">=3.12"
dependencies    = [
    "lz4>=4.4.4",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "sh>=2.2.2",
    "typer>=0.16.0",
]


[tool.ruff]
target-version = "py312"
line-length    = 120
extend-exclude = ["tests", "typings", "preserved"]

[tool.ruff.lint]
extend-select = ["I"]
fixable       = ["ALL"]

[tool.ruff.lint.isort]
known-first-party  = ["kernel_builder"]
combine-as-imports = true

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "auto"


[tool.basedpyright]
include = ["kernel_builder"]
exclude = ["tests", "typings", "preserved"]

pythonVersion    = "3.12"
pythonPlatform   = "Linux"
typeCheckingMode = "recommended"
stubPath         = "typings"

reportCallInDefaultInitializer = "none"
reportUnusedCallResult         = "none"
reportExplicitAny              = "none"
reportAny                      = "none"
